--- a/src/app/components/header/menu/menu.module.css
+++ b/src/app/components/header/menu/menu.module.css
@@ -3,7 +3,7 @@
     gap: 20px;
     list-style: none;
     /*text-transform: uppercase;*/
-    font-size: .95em;
+    font-size: 0.95em;
     font-weight: 500;
 }
 
@@ -32,6 +32,12 @@
 .menu li a:hover:after {
     width: 100%;
     left: 0;
+}
+
+@media screen and (max-width: 1000px) {
+    .menu {
+        font-size: 0.9em;
+    }
 }
 
 @media screen and (max-width: 960px) {
